Fixed side bar icon alignment for FF

--- a/airline-web/public/stylesheets/main.css
+++ b/airline-web/public/stylesheets/main.css
@@ -120,6 +120,7 @@ a {
     backdrop-filter: blur(2px);
     margin: 5px;
     box-shadow: inset 0 0 15px rgba(255, 255, 255, 0.6), 0 0 4px rgba(0, 0, 0, 1);
+    position: relative;
 }
 
 #main-tabs .left-tab div.tab-icon:hover, #main-tabs .left-tab div.tab-icon.selected {
